# flaskr

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  config.py  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml
.github/: build-release.sh  renovate.json
.github/workflows/: ci.yaml  docker-build-scan-push.yaml  release.yaml  test.yaml
charts/flaskr/: Chart.yaml  values.yaml
charts/flaskr/templates/: NOTES.txt  deployment.yaml  ingress.yaml
deployment/charts/flaskr/: Chart.yaml  values.yaml
deployment/charts/flaskr/templates/: _helpers.tpl  hpa.yaml  service.yaml  serviceaccount.yaml
deployment/charts/flaskr/templates/tests/: test-connection.yaml
deployment/compose/devel/: compose.yaml
deployment/compose/mysql/: compose.yaml
deployment/compose/standalone/: compose.yaml
flaskr/: __init__.py  auth.py  blog.py  db.py  models.py  schema.sql
flaskr/templates/: base.html
src/flaskr/: __init__.py  auth.py  blog.py  models.py
src/flaskr/templates/blog/: detail.html  index.html
tests/: conftest.py  test_auth.py  test_blog.py  test_cli.py
