[tool.poetry]
name = "flaskr"
version = "0.1.0"
description = "Sample Flask/MySQL multi-tier web app"
authors = ["Michael Richardson <michaelr@rblabs.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.3"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
