[tool.poetry]
name = "flaskr"
version = "0.1.0"
description = "Sample Flask/MySQL multi-tier web app"
authors = ["Michael Richardson <michaelr@rblabs.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.3"
pymysql = "^1.1.0"
cryptography = "^41.0.4"
sqlalchemy = "^2.0.22"
flask-sqlalchemy = "^3.1.1"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
pytest = "^7.4.2"
coverage = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["flaskr"]